--- a/others/animacao/animacao-teste.html
+++ b/others/animacao/animacao-teste.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/others/animacao/style-animacao.css">
+	<link rel="stylesheet" href="style-animacao.css">
 	<title> Loop & Sprites </title>
+	<link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 	<script src="/others/animacao/animacao.js" defer></script>
 	<script src="/others/animacao/bola.js" defer></script>
 </head>
