consertando problema dos arquivos no servidor

--- a/others/clipping/teste-spritesheet-2.html
+++ b/others/clipping/teste-spritesheet-2.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> PERONSAGEM CONTROLÁVEL E ANIMADO TECLADO </title>
     <script src="spritesheet.js"></script>
-    <script src="/others/animacao/animacao.js"></script>
-    <script src="/others/manip_teclado/teclado.js"></script>
+    <script src="animacao.js"></script>
+    <script src="teclado.js"></script>
     <script src="sonic.js"></script>
     <link rel="stylesheet" href="sonic.css">
 </head>
